--- a/room1.html
+++ b/room1.html
@@ -19,10 +19,10 @@
     <script src="https://forms.yandex.ru/_static/embed.js">
     </script>
     <iframe 
-      src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?iframe=1"
+      src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614?answer_choices_71392141=Ц07/?iframe=1"
       frameborder="0"
       name="ya-form-67b5cc61493639f465cb6614"
-      width="650">
+      width="100%">
     </iframe>
       
     </section>
