--- a/room2.html
+++ b/room2.html
@@ -21,7 +21,8 @@
         src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614?answer_choices_71392141=Ц19/?iframe=1"
         frameborder="0"
         name="ya-form-67b5cc61493639f465cb6614"
-        width="100%">
+        width="100%"
+        height="1000">
       </iframe>
         
       </section>
