--- a/room1.html
+++ b/room1.html
@@ -23,6 +23,7 @@
       frameborder="0"
       name="ya-form-67b5cc61493639f465cb6614"
       width="100%"
+      mode="WEEK"
       height="1000">
     </iframe>
       
