--- a/room2.html
+++ b/room2.html
@@ -33,7 +33,8 @@
         src="https://calendar.google.com/calendar/embed?src=c_4f333ae69e21185a1992fa2a821f69466a50bd9adf7779fa850191ce26d6efb6@group.calendar.google.com&ctz=Europe%2FMoscow" 
         style="border: 0" 
         width="100%" 
-        height="600" 
+        height="600"
+        mode="WEEK" 
         frameborder="0" 
         scrolling="no">
       </iframe>
