--- a/room2.html
+++ b/room2.html
@@ -28,9 +28,9 @@
       </section>
 
     <section class="calendar">
-      <h2>Расписание переговорной №2</h2>
+      <h2>Расписание Ц19</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=c_4f333ae69e21185a1992fa2a821f69466a50bd9adf7779fa850191ce26d6efb6@group.calendar.google.com&ctz=Europe%2FMoscow" 
+        src="https://calendar.google.com/calendar/embed?src=c_4f333ae69e21185a1992fa2a821f69466a50bd9adf7779fa850191ce26d6efb6@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600"
@@ -43,7 +43,7 @@
 
   <footer>
     <p><a href="index.html">Вернуться на главную</a></p>
-    <p>© Ваш Университет, 2025</p>
+    <p>©tinsl, 2025</p>
   </footer>
 </body>
 </html>
