--- a/room1.html
+++ b/room1.html
@@ -23,7 +23,6 @@
       frameborder="0"
       name="ya-form-67b5cc61493639f465cb6614"
       width="100%"
-      mode="WEEK"
       height="1000">
     </iframe>
       
@@ -31,9 +30,9 @@
 
     <!-- Айфрейм с Google Calendar -->
     <section class="calendar">
-      <h2>Расписание переговорной №1</h2>
+      <h2>Расписание Ц07</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=c_cd46b80764db5948d7ea245dd132ac97ae5fd1f15893ceb7bae4c99ec163b844@group.calendar.google.com&ctz=Europe%2FMoscow" 
+        src="https://calendar.google.com/calendar/embed?src=c_cd46b80764db5948d7ea245dd132ac97ae5fd1f15893ceb7bae4c99ec163b844@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600" 
@@ -45,7 +44,7 @@
 
   <footer>
     <p><a href="index.html">Вернуться на главную</a></p>
-    <p>© Ваш Университет, 2025</p>
+    <p>©tinsl, 2025</p>
   </footer>
 </body>
 </html>
