--- a/room2.html
+++ b/room2.html
@@ -18,7 +18,7 @@
       <script src="https://forms.yandex.ru/_static/embed.js">
       </script>
       <iframe 
-        src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_choices_71392141=Ц19?iframe=1"
+        src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_choices_71392141=141547999?iframe=1"
         frameborder="0"
         name="ya-form-67b5cc61493639f465cb6614"
         width="100%"
