--- a/room1.html
+++ b/room1.html
@@ -19,7 +19,7 @@
     <script src="https://forms.yandex.ru/_static/embed.js">
     </script>
     <iframe 
-      src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_choices_71392141=141547892?iframe=1"
+      src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_short_text_71431068=Ц07?iframe=1"
       frameborder="0"
       name="ya-form-67b5cc61493639f465cb6614"
       width="100%"
@@ -32,7 +32,7 @@
     <section class="calendar">
       <h2>Расписание Ц07</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=c_cd46b80764db5948d7ea245dd132ac97ae5fd1f15893ceb7bae4c99ec163b844@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
+        src="https://calendar.google.com/calendar/embed?src=f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600" 
