--- a/room2.html
+++ b/room2.html
@@ -18,7 +18,7 @@
       <script src="https://forms.yandex.ru/_static/embed.js">
       </script>
       <iframe 
-        src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_choices_71392141=141547999?iframe=1"
+        src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_short_text_71431068=Ц19?iframe=1"
         frameborder="0"
         name="ya-form-67b5cc61493639f465cb6614"
         width="100%"
@@ -30,7 +30,7 @@
     <section class="calendar">
       <h2>Расписание Ц19</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=c_4f333ae69e21185a1992fa2a821f69466a50bd9adf7779fa850191ce26d6efb6@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
+        src="https://calendar.google.com/calendar/embed?src=cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600"
