--- a/room1.html
+++ b/room1.html
@@ -19,7 +19,7 @@
     <script src="https://forms.yandex.ru/_static/embed.js">
     </script>
     <iframe 
-      src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?iframe=1&answer_short_text_71431068=Ц07"
+      src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_short_text_71431068=Ц07"
       frameborder="0"
       name="ya-form-67b5cc61493639f465cb6614"
       width="100%"
