--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Система бронирования переговорных</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
@@ -13,15 +14,19 @@
 
   <main>
     <p>Выберите переговорную, чтобы забронировать удобное время:</p>
-    <ul>
-      <li><a href="room1.html">Ц07</a></li>
-      <li><a href="room2.html">Ц19</a></li>
+        <div class="main-buttons">
+          <a href="room1.html" class="big-button">Ц07</a>
+          <a href="room2.html" class="big-button">Ц19</a>
+        </div>
+        
+        <a href="room07.html" class="room-button">Ц07</a>
+        <a href="room19.html" class="room-button">Ц19</a>
+
       <!-- Если появятся дополнительные, добавьте их здесь -->
-    </ul>
   </main>
 
   <footer>
-    <p>© Ваш Университет, 2025</p>
+    <p>© tinsl, 2025</p>
   </footer>
 </body>
 </html>
