--- a/room2.html
+++ b/room2.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ц19</title>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
