--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Система бронирования переговорных</title>
+  <title>Система бронирования аудиторий</title>
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <p>Выберите переговорную, чтобы забронировать удобное время:</p>
+    <p>Выберите переговорную, чтобы забронировать удобное время или посмотреть её расписание:</p>
         
         <a href="room1.html" class="room-button">Ц07</a>
         <a href="room2.html" class="room-button">Ц19</a>
