--- a/room2.html
+++ b/room2.html
@@ -19,7 +19,7 @@
       <script src="https://forms.yandex.ru/_static/embed.js">
       </script>
       <iframe 
-        src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?answer_short_text_71431068=Ц19"
+        src="https://forms.yandex.ru/cloud/67b5cc61493639f465cb6614/?iframe=1&answer_short_text_71431068=Ц19"
         frameborder="0"
         name="ya-form-67b5cc61493639f465cb6614"
         width="100%"
@@ -40,6 +40,8 @@
         scrolling="no">
       </iframe>
     </section>
+    <p>Чтобы добавить календарь этой аудитории в приложение "Календарь" на iPhone:<br>Добавьте подписной календарь в приложении, вставив ссылку:<br><code>https://calendar.google.com/calendar/ical/f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c%40group.calendar.google.com/public/basic.ics</code></code><br><i><a href = 'https://telegra.ph/na-mobilnom-ustrojstve-02-13'>ПОДРОБНАЯ ИНСТРУКЦИЯ</a></i></a></i></p>
+
   </main>
 
   <footer>
