--- a/room2.html
+++ b/room2.html
@@ -40,8 +40,18 @@
         scrolling="no">
       </iframe>
     </section>
-    <p>Чтобы добавить календарь этой аудитории в приложение "Календарь" на iPhone:<br>Добавьте подписной календарь в приложении, вставив ссылку:<br><code>https://calendar.google.com/calendar/ical/f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c%40group.calendar.google.com/public/basic.ics</code></code><br><i><a href = 'https://telegra.ph/na-mobilnom-ustrojstve-02-13'>ПОДРОБНАЯ ИНСТРУКЦИЯ</a></i></a></i></p>
+    <p>Чтобы добавить календарь этой аудитории в приложение "Календарь" на iPhone:<br>Добавьте подписной календарь в приложении, вставив ссылку:<br><code class="break-word">https://calendar.google.com/calendar/ical/cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797%40group.calendar.google.com/public/basic.ics</code></code></p>
+    <button onclick="copyToClipboard()">Скопировать ссылку</button>
 
+    <script>
+    function copyToClipboard() {
+      const text = "https://calendar.google.com/calendar/ical/cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797%40group.calendar.google.com/public/basic.ics";
+      navigator.clipboard.writeText(text).then(() => {
+        alert('Ссылка скопирована в буфер обмена');
+      });
+    }
+    </script>
+    <p><i><a href='https://telegra.ph/na-mobilnom-ustrojstve-02-13'>ПОДРОБНАЯ ИНСТРУКЦИЯ</a></i></p>
   </main>
 
   <footer>
