--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   </header>
 
   <main>
-    <p>Выберите переговорную, чтобы забронировать удобное время или посмотреть её расписание:</p>
+    <p>Нажмите, для какого кабинета забронировать время или посмотреть расписание:</p>
         
+        <a href="room3.html" class="room-button">Ц06</a>
         <a href="room1.html" class="room-button">Ц07</a>
         <a href="room2.html" class="room-button">Ц19</a>
+
 
       <!-- Если появятся дополнительные, добавьте их здесь -->
   </main>
