--- a/room1.html
+++ b/room1.html
@@ -33,7 +33,7 @@
     <section class="calendar">
       <h2>Расписание Ц07</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
+        src="https://calendar.google.com/calendar/embed?src=f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600" 
