--- a/room2.html
+++ b/room2.html
@@ -31,7 +31,7 @@
     <section class="calendar">
       <h2>Расписание Ц19</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
+        src="https://calendar.google.com/calendar/embed?src=cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600"
