--- a/room3.html
+++ b/room3.html
@@ -33,7 +33,7 @@
     <section class="calendar">
       <h2>Расписание Ц06</h2>
       <iframe 
-        src="https://calendar.google.com/calendar/embed?src=af8066ba1f9fb42f7d892086935260a48aa9e3a0f6cb5972140e0ec0c63ecd01@group.calendar.google.com&ctz=Europe%2FMoscow&mode=WEEK" 
+        src="https://calendar.google.com/calendar/embed?src=af8066ba1f9fb42f7d892086935260a48aa9e3a0f6cb5972140e0ec0c63ecd01@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK" 
         style="border: 0" 
         width="100%" 
         height="600" 
