--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Система бронирования аудиторий</title>
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
@@ -26,5 +27,17 @@
   <footer>
     <p>© tinsl, 2025</p>
   </footer>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')
+        .then((registration) => {
+          console.log('Service Worker зарегистрирован с областью:', registration.scope);
+        })
+        .catch((error) => {
+          console.error('Ошибка регистрации Service Worker:', error);
+        });
+    }
+  </script>
+  
 </body>
 </html>
