--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Система бронирования аудиторий</title>
+  <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
