--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   </main>
 
   <footer>
+    <p>Добавьте сайт на главный экран, чтобы использовать его как приложение</p>
+    <p>Также доступно в виде <a href = 'https://t.me/piraobot'>Telegram Mini-App</a></p>
     <p>© tinsl, 2025</p>
   </footer>
   <script>
