--- a/room3.html
+++ b/room3.html
@@ -57,7 +57,7 @@
   </main>
 
   <footer>
-    <p><a href="index.html">Вернуться на главную</a></p>
+    <p><a href="/index.html">Вернуться на главную</a></p>
     <p>©tinsl, 2025</p>
   </footer>
 </body>
