--- a/room2.html
+++ b/room2.html
@@ -30,6 +30,8 @@
 
     <section class="calendar">
       <h2>Расписание Ц19</h2>
+      <p>Для управления событием(изменением времени/удалением) используйте приложение Календарь на Вашем устройстве или Ваш Google Calendar (аккаунт должен совпадать с почтой, которую Вы указали). Управление доступно после того, как Вы примете приглашение на почте или в приложении.</p>
+      <p><a href = 'https://telegra.ph/Kak-prinyat-priglashenie-i-upravlyat-sobytiem-02-22'>Подробная инструкция о том, как управлять событием</a></p>
       <iframe 
         src="https://calendar.google.com/calendar/embed?src=cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK" 
         style="border: 0" 
