--- a/room3.html
+++ b/room3.html
@@ -32,6 +32,8 @@
     <!-- Айфрейм с Google Calendar -->
     <section class="calendar">
       <h2>Расписание Ц06</h2>
+      <p>Для управления событием(изменением времени/удалением) используйте приложение Календарь на Вашем устройстве или Ваш Google Calendar (аккаунт должен совпадать с почтой, которую Вы указали). Управление доступно после того, как Вы примете приглашение на почте или в приложении.</p>
+      <p><a href = 'https://telegra.ph/Kak-prinyat-priglashenie-i-upravlyat-sobytiem-02-22'>Подробная инструкция о том, как управлять событием</a></p>
       <iframe 
         src="https://calendar.google.com/calendar/embed?src=af8066ba1f9fb42f7d892086935260a48aa9e3a0f6cb5972140e0ec0c63ecd01@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK" 
         style="border: 0" 
