--- a/room1.html
+++ b/room1.html
@@ -32,6 +32,8 @@
     <!-- Айфрейм с Google Calendar -->
     <section class="calendar">
       <h2>Расписание Ц07</h2>
+      <p>Для управления событием(изменением времени/удалением) используйте приложение Календарь на Вашем устройстве или Ваш Google Calendar (аккаунт должен совпадать с почтой, которую Вы указали). Управление доступно после того, как Вы примете приглашение на почте или в приложении.</p>
+      <p><a href = 'https://telegra.ph/Kak-prinyat-priglashenie-i-upravlyat-sobytiem-02-22'>Подробная инструкция о том, как управлять событием</a></p>
       <iframe 
         src="https://calendar.google.com/calendar/embed?src=f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK" 
         style="border: 0" 
