--- a/video.html
+++ b/video.html
@@ -6,9 +6,6 @@
     <title>Мое видео</title>
 </head>
 <body>
-    <video controls>
-        <source src="banner#2.mp4" type="video/mp4">
-        Ваш браузер не поддерживает воспроизведение видео.
-    </video>
+    <iframe width="560" height="315" src="https://nuum.ru/embed/videos/4604160--1" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
