--- a/video3.html
+++ b/video3.html
@@ -73,7 +73,7 @@
 <body>
     <div class="video-container">
         <iframe 
-            src="https://nuum.ru/embed/videos/4604160--1?vq=hd1080&autoplay=1&mute=1&controls=0" 
+            src="https://nuum.ru/embed/videos/4604223--3?vq=hd1080&autoplay=1&mute=1&controls=0" 
             title="Nuum video player" 
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -81,7 +81,7 @@
         </iframe>
     </div>
     
-    <a href="https://forms.yandex.ru/cloud/67c7a3b884227cd6b906e845/" class="big-button" target="_self">
+    <a href="https://forms.yandex.ru/cloud/67c7a3b884227cd6b906e845/?answer_short_text_72850734=ГРУППА3" class="big-button" target="_self">
         ВЕРНУТЬСЯ В ФОРМУ
     </a>
 </body>
