--- a/fig.html
+++ b/fig.html
@@ -11,6 +11,12 @@
       overflow: hidden;
       font-family: Arial, sans-serif;
     }
+    p {
+      text-align: center;
+      font-family: Helvetica, sans-serif;
+      font-size: 20px;
+      margin: 10px 0;
+    }
     .container {
       display: flex;
       flex-direction: column;
@@ -46,6 +52,7 @@
 </head>
 <body>
   <div class="container">
+    <p>Спасибо, что открыли задание! Если снизу Вы видите белый экран, всё нормально, подождите, задание скоро загрузится!</p>
     <div class="iframe-container">
       <!-- Замените URL на ссылку вашего Figma-прототипа -->
       <iframe id="figmaFrame" 
