--- a/fig.html
+++ b/fig.html
@@ -64,7 +64,7 @@
     </div>
     
     <div class="button-container">
-      <button class="back-button" onclick="goBack()">Вернуться назад</button>
+      <button class="back-button" onclick="goBack()">Вернуться в форму</button>
     </div>
   </div>
   
