feat: Implemented version switching and fixed iOS background

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             
             <div class="copyright">
                 <p>©tinsl, 2025</p>
+                <p><a href="index_legacy.html" style="color: var(--primary-orange); text-decoration: none;">Переключиться на старую версию</a></p>
             </div>
         </footer>
     </div>
