--- a/room1.html
+++ b/room1.html
@@ -103,6 +103,7 @@
                 <div class="toolbar-room-label">Ц19</div>
             </a>
         </div>
+        <p style="text-align: center; margin-top: 5px; font-size: 0.8rem;"><a href="index_legacy.html" style="color: var(--primary-orange); text-decoration: none;">Переключиться на старую версию</a></p>
     </nav>
 
     <script>
