--- a/room3.html
+++ b/room3.html
@@ -66,7 +66,7 @@
         <div class="content-section" id="calendar-section">
             <div class="iframe-wrapper">
                 <iframe 
-                    src="https://calendar.google.com/calendar/embed?src=30d6cb00e3de7e0bb6f4eeb1ef2d8dcb5faf5e00c5a717e424bd42cdd6abb7f2@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK"
+                    src="https://calendar.google.com/calendar/embed?src=af8066ba1f9fb42f7d892086935260a48aa9e3a0f6cb5972140e0ec0c63ecd01%40group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK"
                     frameborder="0"
                     scrolling="yes">
                 </iframe>
