--- a/room1.html
+++ b/room1.html
@@ -64,6 +64,9 @@
 
         <!-- Секция календаря -->
         <div class="content-section" id="calendar-section">
+            <div class="booking-instruction">
+                <p>Если ваше бронирование не отображается, обновите страницу</p>
+            </div>
             <div class="iframe-wrapper">
                 <iframe 
                     src="https://calendar.google.com/calendar/embed?src=f4014681b62ce5afc258b2a7faa19bcba3224af4d396746c86a41cb97132f31c@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK"
