--- a/room2.html
+++ b/room2.html
@@ -64,6 +64,9 @@
 
         <!-- Секция календаря -->
         <div class="content-section" id="calendar-section">
+            <div class="booking-instruction">
+                <p>Если ваше бронирование не отображается, обновите страницу</p>
+            </div>
             <div class="iframe-wrapper">
                 <iframe 
                     src="https://calendar.google.com/calendar/embed?src=cfe2941a47938dcbfd25ce7e102bfb6f3cced91dca8c6219da00873008f0b797@group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK"
