--- a/room3.html
+++ b/room3.html
@@ -64,6 +64,9 @@
 
         <!-- Секция календаря -->
         <div class="content-section" id="calendar-section">
+            <div class="booking-instruction">
+                <p>Если ваше бронирование не отображается, обновите страницу</p>
+            </div>
             <div class="iframe-wrapper">
                 <iframe 
                     src="https://calendar.google.com/calendar/embed?src=af8066ba1f9fb42f7d892086935260a48aa9e3a0f6cb5972140e0ec0c63ecd01%40group.calendar.google.com&ctz=Europe%2FMoscow&wkst=2&mode=WEEK"
